--- a/config.ini
+++ b/config.ini
@@ -6,3 +6,7 @@ filepath_action_recover_done = D:\code\code\code2\message_ass.db.txt.jy.0817.act
 
 [time]
 before_set_time = 2023-06-30 0:0:0
+
+[sqlite]
+filename_db =
+filename_txt =
