编写了main函数

--- a/config.ini
+++ b/config.ini
@@ -10,3 +10,8 @@ before_set_time = 2023-06-30 0:0:0
 [sqlite]
 filename_db =
 filename_txt =
+
+
+[all_user]
+root_base = /mail/turbomail/accounts/ssmec.com
+filepath_user_list = /mail/all_user_list
