--- a/config_global.ini
+++ b/config_global.ini
@@ -4,14 +4,23 @@ filepath_action_done = D:\code\code\code2\message_ass.db.txt.jy.0817.action.done
 filepath_action_recover_at_the_moment = D:\code\code\code2\message_ass.db.txt.jy.0817.action.recover.at.the.moment
 filepath_action_recover_done = D:\code\code\code2\message_ass.db.txt.jy.0817.action.recover.done
 
-[time]
-before_set_time = 2023-06-30 0:0:0
-
-[sqlite]
+[sqlite_action_done]
 filename_db =
 filename_txt =
 
 
+[sqlite_action_recover]
+filename_db =
+filename_txt =
+
+
+
+
+
+[time]
+before_set_time = 2023-06-30 0:0:0
+
+
 [all_user]
-root_base = /mail/turbomail/accounts/ssmec.com
+ssmec_com = /mail/turbomail/accounts/ssmec.com
 filepath_user_list = /mail/all_user_list
